team/output/BD_1061_2436_2492/331/1/1/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_1061_2436_2492_fbuAx2K.py", line 8
    from __future__ import print_function
    ^
IndentationError: unexpected indent
